--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
 <body>
     <h1> My contact information</h1>
    <pr>
-        Email : <a href="ce21btech11009@iith.ac.in">ce21btech11009@iith.ac.in</a>
+        Email : <a href="mailto:ce21btech11009@iith.ac.in">ce21btech11009@iith.ac.in</a>
         <br>
         Contact number : +91 -----
         <br>
